# learning

./: .clang-format  .gitignore  .gitmodules
c++/: .gitignore  main.cpp  main.i  out.txt  output.txt  roadmap.docx
c++/learn-cmake/: CMakeLists.txt
c++/learn-cmake/src/: CMakeLists.txt  blah.cpp  hello.cpp  main.cpp
c++/learn-cmake/tests/: CMakeLists.txt  hello_test.cc
c++/linear-structures/hash-tables/: hash-table  hash-table.cpp
c++/linear-structures/linked-lists/: linked-list  linked-list-class  linked-list-class.cpp  linked-list.cpp
c++/linear-structures/queues/: array-based-queue.cpp  list-based-queue.cpp
c++/linear-structures/stacks/: char-stack.cpp  list-based-stack.cpp  stack.cpp
c++/list/: Makefile  list.cpp  list.h  test_list.cpp
c++/sorting/: bubble-sort  bubble-sort.cpp  heap-sort  heap-sort.cpp  insertion-sort  insertion-sort.cpp  merge-sort  merge-sort.cpp  quick-sort  quick-sort.cpp  selection-sort.cpp
c++/templates/basics/: Makefile  boolstring.hpp  isprime14  isprime14.cpp  max1.cpp  max1.hpp  maxauto.cpp  maxauto.hpp  move1  move1.cpp  stack1.hpp  stack1test.cpp  stacknontype.hpp  variadic  variadic.cpp  varprint1.cpp  varprint1.hpp
concurrent-programming/cpp-concurrency-in-action/: CMakeLists.txt
concurrent-programming/cpp-concurrency-in-action/chapter-1/: hello.cpp
concurrent-programming/cpp-concurrency-in-action/chapter-2/: CMakeLists.txt  join_thread_exception.cpp  launch_thread.cpp  parallel_accumulate.cpp  pass_args.cpp  scoped_thread.cpp  spawn_threads.cpp  transfer_thread.cpp
concurrent-programming/cpp-concurrency-in-action/chapter-3/: hierarchical_mutex  hierarchical_mutex.cpp  lock_mutexes  lock_mutexes.cpp  protect_data  protect_data.cpp  steal_data.cpp
concurrent-programming/cpp-concurrency-in-action/chapter-4/: CMakeLists.txt  async.h  async_test.cpp  expr_future_test.cpp  fp_quicksort.h  fp_quicksort_test.cpp  future.h  future_test.cpp  hello_test.cpp  packaged_task.h  packaged_task_test.cpp  promise.h  promise_test.cpp  shared_future.h  shared_future_test.cpp  shared_state.h  test_utils.h
concurrent-programming/cpp-concurrency-in-action/chapter-5/: CMakeLists.txt  atomic_main.cpp  seq_cst.cpp
concurrent-programming/cpp-concurrency-in-action/chapter-6/: fine_grained_queue  fine_grained_queue.cpp  fine_grained_queue.h  threadsafe_queue_cv.h  threadsafe_stack.h
concurrent-programming/cpp-concurrency-in-action/chapter-9/: function_wrapper.h  join_threads.h  local_thread_pool.h  parallel_accumulate  parallel_accumulate.cpp  simple_thread_pool.h  thread_pool  thread_pool.cpp  thread_pool.h  waitable_thread_pool.h
concurrent-programming/lock-free-programming/: CMakeLists.txt  dekker.cpp  lock_free.cpp  memory_ordering.cpp  memory_ordering.s  seq_consistency.cpp  seq_consistency.s  test_relacy.cpp  trio.h
coroutine/: CMakeLists.txt  async_reset_event.cpp  coroutine.cpp  generator.cpp  symmetric_transfer.cpp
crafting-interpreters/: CMakeLists.txt
crafting-interpreters/cclox/: main.cpp
go/: example.go  note.txt
go/create-module/hello/: hello  hello.go
go/fuzz/testdata/fuzz/FuzzReverse/: cd6b859adaf8a7b5
go/gowiki/: test.txt  wiki.go  work.txt
go/src/: go.mod
go/src/chap1/: dup1.go  dup2.go  dup3.go  echo1.go  echo2.go  fetch.go  fetchall.go  lissajous  lissajous.go  server1.go  server3.go
go/src/chap11/word1/: go.mod  word.go  word_test.go
go/src/chap11/word2/: word.go  word_test.go
go/src/chap2/: boiling.go  echo4.go  test.go
go/src/chap3/: comma.go  printints.go
go/src/chap4/: rev.go
go/src/chap5/: closure.go  work.go
go/src/chap6/: geometry.go  intset-test.go  intset.go  method_expr.go  method_value.go
go/src/chap7/: sort.go  type.go
go/src/chap7/eval/: ast.go  check.go  coverage_test.go  eval.go  eval_test.go
go/src/chap8/: clock1  countdown.go  crawl.go  du2  du2.go  du3.go  pipeline.go  reverb  reverb.go  spinner.go
go/src/chap9/: memo4.go  memo5.go
go/web-service-gin/: go.mod  main.go
linux-container/: CMakeLists.txt  contained.c
optimization/: .clang-format  CMakeLists.txt  bench.cpp  controlling_timers.cpp  custom_stat.cpp  fast.cpp  intro.cpp  main.cpp  manual_timing.cpp  prevent_opt.cpp  timer.cpp
protobuf/: CMakeLists.txt  README.md  add_person.cc  address_book.txt  addressbook.pb.cc  addressbook.pb.h  build_note.md  list_people.cc
python/: closet_points.py  closure.py  data_class.py  data_model.py  first_class_fn.py  object_reference.py  registration_param.py  sequence.py  vector2d.py
python/ABC/: frenchdeck2.py
python/decorator/: clockdeco_cls.py  clockdeco_cls_demo.py  dispatch.py
rust/projects/crust-of-rust/dispatching/: Cargo.toml
rust/projects/crust-of-rust/dispatching/src/: lib.rs
rust/projects/crust-of-rust/pointers/src/: cell.rs  rc.rs  refcell.rs
rust/projects/crust-of-rust/strsplit/src/: lib.rs
rust/projects/experiment/src/: main.rs
rust/projects/guessing_game/src/: main.rs
rust/projects/mandelbrot/src/: main.rs
rust/projects/minigrep/src/: lib.rs
rust/projects/web_server/src/: lib.rs  main.rs
rust/rustlings/: rust-project.json
